--- a/4-workshop/src/views/attachAccessory.hbs
+++ b/4-workshop/src/views/attachAccessory.hbs
@@ -4,14 +4,12 @@
             <div class="form">
                 <h2>{{cube.name}}</h2>
                 <img class="cube" src={{cube.imageUrl}}>
-                <form action="" method="">
+                <form method="">
                     <label for="accessory">Accessories</label>
                     <select id="accessory" name="accessory" />
-                    <option value="Accessory 1">Accessory 1</option>
-                    <option value="Accessory 2">Accessory 2</option>
-                    <option value="Accessory 3">Accessory 3</option>
-                    <option value="Accessory 4">Accessory 4</option>
-                    <option value="Accessory 5">Accessory 5</option>
+                    {{#each accessories}}
+                    <option value={{_id}}>{{name}}</option>
+                    {{/each}}
                     </select>
                     <input type="submit" value="Attach">
                 </form>
