--- a/4-workshop/src/views/attachAccessory.hbs
+++ b/4-workshop/src/views/attachAccessory.hbs
@@ -6,15 +6,19 @@
                 <img class="cube" src={{cube.imageUrl}}>
                 <form method="post">
                     <label for="accessory">Accessories</label>
+                    {{#if accessories}}
                     <select id="accessory" name="accessory" />
                     {{#each accessories}}
                     <option value={{_id}}>{{name}}</option>
                     {{/each}}
                     </select>
+                    {{else}}
+                        <h3 class="italic">The cube has all available accessories...
+                        </h3>
+                    {{/if}}
                     <input type="submit" value="Attach">
                 </form>
-                <h3 class="italic">{{cube.description}}
-                </h3>
+
                 <a class="btn" href="/cube/{{cube._id}}">Back</a>
             </div>
         </main>
