--- a/5-workshop/src/views/details.hbs
+++ b/5-workshop/src/views/details.hbs
@@ -5,8 +5,13 @@
        <div class="details">
            <p><span>Description:</span>{{cube.description}}</p>
            <p><span>Difficulty level:</span> {{cube.difficultyLevel}}</p>
+           {{#if user}}
            <a class="btn" href="/cube/{{cube._id}}/attach-accessory">Attach</a>
+           {{#if isOwner}}
            <a class="btn" href="/cube/{{cube._id}}/edit">Edit</a>
+               <a class="btn" href="/cube/{{cube._id}}/delete">Delete</a>
+           {{/if}}
+           {{/if}}
            <a class="btn" href="/">Back</a>
        </div>
        <h2>Accessories</h2>
