--- a/exam-preparation/views/layouts/main.hbs
+++ b/exam-preparation/views/layouts/main.hbs
@@ -32,10 +32,10 @@
         <a href="/">ArtGallery</a>
 
         <ul class="menu">
-            <li><a href="#">Gallery</a></li>
+            <li><a href="/publications">Gallery</a></li>
             <!-- Logged users -->
             {{#if user}}
-            <li><a href="#">Create Publication</a></li>
+            <li><a href="/publications/create">Create Publication</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="/auth/logout">Logout</a></li>
             {{else}}
