--- a/exam-preparation/views/publication/index.hbs
+++ b/exam-preparation/views/publication/index.hbs
@@ -6,20 +6,11 @@
 
             <!--If there are art publications in the database, show each of them-->
             {{#each publications}}
-                <article class="card-info">
-                    <article class="card-info-image">
-                        <img src={{artPicture}} alt="art-image">
-                    </article>
-                    <article class="card-info-text">
-                        <h2>Title: {{title}}</h2>
-                        <h3>Certificate of authenticity: {{certificate}}</h3>
-                        <a href="#" class="details-btn">Details</a>
-                    </article>
-                </article>
+                {{> publication}}
             {{else}}
                 <article class="no-available-publications">
                     <h1>No publications created yet.</h1>
-                    <a href="#" class="create-pub">Create publication</a>
+                    <a href="/publications/create" class="create-pub">Create publication</a>
                 </article>
             {{/each}}
 
