--- a/exam-preparation/views/publication/details.hbs
+++ b/exam-preparation/views/publication/details.hbs
@@ -6,7 +6,7 @@
                 <article class="details-card">
 
                     <article class="details-card-text">
-                        <h2>Title:<br> {{title}}</h2>
+                        <h2>Title: <br> {{title}} </h2>
                         <h3>Author: {{author.username}}</h3>
                         <h3>Painting technique: {{paintingTechnique}}</h3>
                         <h3>Certificate of authenticity: {{certificate}}</h3>
@@ -14,13 +14,16 @@
                         <!-- If there is no registered user, do not display buttons-->
                         {{#if user}}
                         <div class="buttons">
+                            {{#if isAuthor}}
                             <!-- Only for registered user and author of the publication -->
-                            <a href="#" class="btn-edit">Edit</a>
-                            <a href="#" class="btn-delete">Delete</a>
+                            <a href="/publications/{{_id}}/edit" class="btn-edit">Edit</a>
+                            <a href="/publications/{{_id}}/delete" class="btn-delete">Delete</a>
+                            {{else}}
                             <!-- logged in user who has not yet shared the publication-->
-                            <a href="#" class="btn-share">Share publication</a>
+                            <a href="/publications/{{_id}}/share" class="btn-share">Share publication</a>
                             <!-- logged in user who has already shared the publication-->
                             <p class="shared-pub">You already shared this publication</p>
+                            {{/if}}
                         </div>
                         {{/if}}
 
