Final Touches For the Day

--- a/exam-preparation/views/publication/edit.hbs
+++ b/exam-preparation/views/publication/edit.hbs
@@ -9,16 +9,16 @@
                 <p>Edit your masterpiece!</p>
 
                 <label for="title">Title:</label>
-                <input type="text" id="title" name="" value={{title}}>
+                <input type="text" id="title" name="title" value={{title}}>
 
                 <label for="painting-tech">Painting technique:</label>
-                <input type="text" id="painting-tech" name="" value={{paintingTechnique}}>
+                <input type="text" id="painting-tech" name="paintingTechnique" value={{paintingTechnique}}>
 
                 <label for="picture">Art picture:</label>
-                <input type="text" id="picture" name="" value={{artPicture}}>
+                <input type="text" id="picture" name="artPicture" value={{artPicture}}>
 
                 <label for="certificate">Certificate of authenticity:</label>
-                <input type="text" id="certificate" name="" value={{certificate}}>
+                <input type="text" id="certificate" name="certificate" value={{certificate}}>
 
                 <button class="edit-btn">Edit</button>
             </form>
