--- a/exam-preparation/views/publication/details.hbs
+++ b/exam-preparation/views/publication/details.hbs
@@ -19,10 +19,13 @@
                             <a href="/publications/{{_id}}/edit" class="btn-edit">Edit</a>
                             <a href="/publications/{{_id}}/delete" class="btn-delete">Delete</a>
                             {{else}}
+                                {{#if isShared}}
+                                        <!-- logged in user who has already shared the publication-->
+                                        <p class="shared-pub">You already shared this publication</p>
+                                {{else}}
                             <!-- logged in user who has not yet shared the publication-->
                             <a href="/publications/{{_id}}/share" class="btn-share">Share publication</a>
-                            <!-- logged in user who has already shared the publication-->
-                            <p class="shared-pub">You already shared this publication</p>
+                                {{/if}}
                             {{/if}}
                         </div>
                         {{/if}}
