--- a/exam/views/layouts/main.hbs
+++ b/exam/views/layouts/main.hbs
@@ -15,12 +15,16 @@
         <img src="/static/images/logo.png" class="logo">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#">All Crypto</a></li>
+            <li><a href="/crypto">All Crypto</a></li>
             <li><a href="#">Search</a></li>
+            {{#if user}}
             <li><a href="#">Create Offer</a></li>
+            <li><a href="/auth/logout">Logout</a></li>
+            {{else}}
             <li><a href="/auth/login">Login</a></li>
             <li><a href="/auth/register">Register</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
+            {{/if}}
+
         </ul>
     </nav>
 </header>
