--- a/exam/views/layouts/main.hbs
+++ b/exam/views/layouts/main.hbs
@@ -18,7 +18,7 @@
             <li><a href="/crypto">All Crypto</a></li>
             <li><a href="#">Search</a></li>
             {{#if user}}
-            <li><a href="#">Create Offer</a></li>
+            <li><a href="/crypto/create">Create Offer</a></li>
             <li><a href="/auth/logout">Logout</a></li>
             {{else}}
             <li><a href="/auth/login">Login</a></li>
