--- a/exam/views/auth/register.hbs
+++ b/exam/views/auth/register.hbs
@@ -5,9 +5,9 @@
         <h4>It's free and only take a minute</h4>
         <form method="POST">
             <label>Username</label>
-            <input type="text" name="username" placeholder="Username..">
+            <input type="text" name="username" placeholder="Username.." value={{username}}>
             <label>Email</label>
-            <input type="text" name="email" placeholder="Email..">
+            <input type="text" name="email" placeholder="Email.." value={{email}}>
             <label>Password</label>
             <input type="password" name="password" placeholder="Password..">
             <label>Confirm Password</label>
