--- a/exam/views/crypto/details.hbs
+++ b/exam/views/crypto/details.hbs
@@ -18,8 +18,8 @@
                     <!--  -->
                     {{#if isOwner}}
                         <div class="author">
-                            <a href="#" class="btn-edit">Edit</a>
-                            <a href="#" class="btn-delete">Delete</a>
+                            <a href="/crypto/{{_id}}/edit" class="btn-edit">Edit</a>
+                            <a href="/crypto/{{_id}}/delete" class="btn-delete">Delete</a>
                         </div>
                     {{else}}
 
