--- a/exam/views/crypto/details.hbs
+++ b/exam/views/crypto/details.hbs
@@ -28,7 +28,7 @@
                         {{#if isPurchased}}
                             <p class="buy-message">You already bought these crypto coins.</p>
                         {{else}}
-                            <a href="#" class="btn-buy">Buy</a>
+                            <a href="/crypto/{{_id}}/buy" class="btn-buy">Buy</a>
                         {{/if}}
                         <!-- Logged in user who has already buy this crypto-->
                     {{/if}}
