--- a/exam/views/layouts/main.hbs
+++ b/exam/views/layouts/main.hbs
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/crypto">All Crypto</a></li>
-            <li><a href="#">Search</a></li>
+            <li><a href="/crypto/search">Search</a></li>
             {{#if user}}
             <li><a href="/crypto/create">Create Offer</a></li>
             <li><a href="/auth/logout">Logout</a></li>
